--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,7 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   background-color: #170068;
+  position: relative;
   overflow-x: hidden;
 }
 
@@ -91,13 +92,27 @@ body {
   z-index: 1;
   background-repeat: no-repeat;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-container .home-section .hero-image {
+  width: 100%;
+  position: absolute;
 }
 
 .main-container .home-section .overlay {
   height: 100%;
   width: 100vw;
   z-index: 3;
-  background-color: rgba(23, 0, 104, 0.8);
+  background-color: rgba(23, 0, 104, 0.219);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -287,6 +302,7 @@ body {
   font-size: 55px;
   font-family: 'Poppins', sans-serif;
   color: #ffffff;
+  font-weight: 200;
 }
 
 .main-container .about-section P {
@@ -386,14 +402,14 @@ body {
           flex-direction: column;
   text-align: justify;
   background-color: #170068;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .main-container .domains h1 {
   font-size: 55px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #ffffff;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 .main-container .domains p {
@@ -487,6 +503,7 @@ body {
   font-size: 55px;
   font-family: 'Poppins', sans-serif;
   color: #ffffff;
+  font-weight: 200;
 }
 
 .main-container .partners .partner-container {
@@ -947,6 +964,7 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 80%;
+  font-family: 'Poppins',sans-serif;
   margin-top: 10px;
 }
 
@@ -1046,7 +1064,7 @@ body {
 .main-container .events-container .events .event-card .event-details p {
   text-align: justify;
   font-size: 15px;
-  font-family: adobe-garamond-pro, serif;
+  font-family: 'Poppins',sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -1069,6 +1087,26 @@ body {
   transition: all 100ms ease-in;
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
+}
+
+.main-container .events-container .events .event-card .event-date {
+  position: relative;
+  font-family: 'Poppins',sans-serif;
+  height: 30px;
+  top: 10px;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.65);
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 600;
 }
 
 .main-container .connect-section {
