Experimenting with illustrations

--- a/css/main.css
+++ b/css/main.css
@@ -172,8 +172,8 @@ body {
 
 .main-container .home-section .overlay .home-content .home-btn {
   border: none;
-  width: 250px;
-  height: 70px;
+  width: 225px;
+  height: 55px;
   outline: none;
   font-size: 24px;
   color: white;
@@ -202,8 +202,6 @@ body {
   cursor: pointer;
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
   border: 5px solid #3700ff;
 }
 
@@ -233,7 +231,7 @@ body {
   -webkit-transition: all 150ms ease-in;
   transition: all 150ms ease-in;
   border-radius: 50px;
-  background: #41a9b5;
+  background: #c62a88b2;
 }
 
 .main-container .home-section .overlay .home-contentTwo {
@@ -306,13 +304,12 @@ body {
 }
 
 .main-container .about-section P {
-  width: 70%;
+  width: 60%;
   font-size: 25px;
   font-family: 'adobe garamond pro', serif;
   font-weight: 400;
   font-style: normal;
   text-align: justify;
-  font-weight: 500;
   margin: 30px;
   color: #ffffff;
 }
@@ -382,6 +379,13 @@ body {
           transform: translateY(-10px);
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
+}
+
+.main-container .about-section .standingpeep {
+  height: 600px;
+  position: absolute;
+  bottom: 0;
+  left: 40px;
 }
 
 .main-container .domains {
