--- a/css/responsive.css
+++ b/css/responsive.css
@@ -178,9 +178,15 @@
   .main-container .domains .domain-cards .subdomains img {
     width: 50px;
     height: auto;
+    padding-top: 10px;
   }
   .main-container .domains .domain-cards .subdomains h2 {
-    font-size: 15px;
+    font-size: 12px;
+  }
+  .main-container .testimonials h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    font-size: 30px;
   }
   .main-container .testimonials .swiper-container {
     width: 90vw;
