--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -181,10 +181,10 @@
             height:auto;
             h1{
                 font-size:30px;
-                font-weight: 400
+                font-weight: 400;
                 
                 
-                ;
+                
             }
             p{
                 width:90%;
@@ -205,10 +205,11 @@
                     img{
                         width:50px;
                         height:auto;
+                        padding-top:10px;
 
                     }
                     h2{
-                        font-size:15px;
+                        font-size:12px;
                     }
 
                 }
@@ -216,6 +217,12 @@
             }
         }
         .testimonials{
+
+            h1{
+                font-family: 'Poppins', sans-serif;
+                font-weight: 200;;
+                font-size:30px;
+            }
 
             .swiper-container{
                 width:90vw;
