--- a/css/main.css
+++ b/css/main.css
@@ -578,7 +578,8 @@ body {
 }
 
 .main-container .testimonials h1 {
-  color: white;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
   font-size: 55px;
 }
 
@@ -590,20 +591,44 @@ body {
 
 .main-container .testimonials .swiper-container .swiper-wrapper {
   width: 100%;
+  overflow: visible;
 }
 
 .main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: #0f0046;
   border-radius: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide .comments {
+  text-align: center;
+  height: 80%;
+  width: 90%;
+  background: rgba(65, 169, 181, 0.5);
+  border-radius: 10px;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide .comments h1 {
+  line-height: 1px;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide .comments h2 {
+  line-height: 1px;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide .comments p {
+  font-size: 20px;
 }
 
 .main-container .testimonials #totheblog {
