--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,12 @@ $heading-color:#200542;
     position:fixed;;
     backdrop-filter: blur(10px);
     color:white;
+    #closenav{
+        position:absolute;
+        right:50px;
+        top:40px;
+
+    }
     .logo{
 
         height:200px;
@@ -53,6 +59,12 @@ $heading-color:#200542;
             font-size:40px;
             margin:30px;
             list-style: none;
+            transition: all 0.5s ease-in-out;
+
+            &:hover{
+                transform: translateX(40px);
+                transition: all 0.5s ease-in-out;
+            }
             a{
                 color:white;
                 text-decoration:none;;
@@ -74,8 +86,8 @@ $heading-color:#200542;
 
     .menu-icon-line{
 
-        height:2px;
-        width:35px;
+        height:5px;
+        width:45px;
         background: #32c2d8;
         margin:10px;
         
@@ -226,7 +238,7 @@ $heading-color:#200542;
                     z-index:4;
                     transition:all 150ms ease-in;
                     border-radius: 50px;
-                    background: #c62a88b2;
+                    background: #c62a88;
 
                 }
             }
@@ -662,6 +674,7 @@ $heading-color:#200542;
             font-family: 'Poppins', sans-serif;
             color:#ffffff;
             font-size:55px;
+            font-weight: 200;
 
         }
         .swiper-container {
@@ -679,26 +692,27 @@ $heading-color:#200542;
                     display:flex;
                     justify-content: space-around;
                     align-items: center;
-                    background-color: #0f0046;
+                    background-color: #0f004600;
                     border-radius: 10px;;
                     flex-direction:column;
-                   .comments{
-                       text-align:center;
-                       height: 80%;
-                       width:90%;
-                       background: rgba(65, 169, 181, 0.5);
-                       border-radius:10px;
-                       h1{
-                        line-height:1px;
+                    .comments{
+                        text-align:center;
+                        height: 80%;
+                        width:90%;
+                        background: rgb(0, 4, 41);
+                        border-radius:10px;
+                        h1{
+                            line-height:1px;
+                           
+                        }
+                        h2{
+                            line-height:1px;
+                        }
+                        p{
+                            
+                            font-size:20px;
+                        }
                     }
-                    h2{
-                        line-height:1px;
-                    }
-                    p{
-                        
-                        font-size:20px;
-                    }
-                   }
                     
 
                 }
