--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,42 +5,29 @@
   body {
     overflow-x: hidden;
   }
-  .responsive-navbar {
-    height: 60px;
-    width: 100vw;
-    background: white;
-    -webkit-box-shadow: 0px 0px 100px 10px rgba(0, 0, 0, 0.808);
-            box-shadow: 0px 0px 100px 10px rgba(0, 0, 0, 0.808);
-    display: block;
-    position: fixed;
-    bottom: 0;
-    z-index: 99;
-  }
-  .responsive-navbar .nav-container {
+  nav {
+    height: 100vh;
     width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    overflow-x: hidden;
   }
-  .responsive-navbar .nav-container .link {
-    height: 50px;
-    width: 50px;
+  nav .nav-container {
+    height: 100vh;
+    width: 100%;
   }
-  .responsive-navbar .nav-container .link:hover {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+  nav .nav-container #closenav {
+    top: 20px;
+    right: 20px;
   }
-  .responsive-navbar .nav-container .link a .link-image {
-    height: 40px;
+  nav .nav-container img.logo {
+    width: 120px;
   }
-  .navbar {
-    display: none;
+  nav .nav-container .links {
+    height: 400px;
+  }
+  nav .nav-container .links .links-l a {
+    font-size: 30px;
+    margin: 10px;
+    font-weight: 100;
   }
   .main-container .home-section {
     width: 100vw;
