--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -7,46 +7,43 @@
         overflow-x: hidden;
     }
 
-    .responsive-navbar{
+   
+    nav{
 
-        height:60px;
-        width:100vw;
-        background: rgb(255, 255, 255);
-        box-shadow:0px 0px 100px 10px rgba(0, 0, 0, 0.808);
-        display:block;
-        position:fixed;
-        bottom:0;
-        z-index: 99;
-        .nav-container{
-            width:100%;
-            height:100%;
-            display:flex;
-            justify-content:space-around
-            ;
-            align-items: center;
-            .link{
+        height:100vh;
+        width:100%;
+        overflow-x: hidden;
 
-                height:50px;
-                width:50px;
-                &:hover{
-                    transform:scale(1.5);
-                    
-                }
-                a{
-                .link-image{
-                    height:40px;
-                }
-                }
+.nav-container{
 
-            }
+   
+    height:100vh;
+    width:100%;
 
-        }
-        
-
-
-    }.navbar{
-        display:none;
+    #closenav{
+        top:20px;
+        right:20px;
     }
+    
+    img.logo{
+        width:120px;
+    }
+
+    .links{
+        height:400px;
+        .links-l{
+            a{
+                font-size:30px;
+                margin:10px;
+                font-weight: 100;
+            }
+        }
+    }
+}
+
+
+    }
+    
 
     .main-container{
         
