--- a/css/main.scss
+++ b/css/main.scss
@@ -98,7 +98,14 @@ $heading-color:#200542;
     }
 }
 
-
+.main-logo{
+    position:absolute;
+    height:100px;
+    z-index:2;
+    top:40px;
+    left:50px;
+   
+}
 .main-container{
     
 
